@@ -35,6 +35,8 @@ public:
   
   virtual void enter(GameEngine*){};
   virtual void exit(GameEngine*){};
+  virtual void save(StateSaver*){};
+  virtual void restore(StateSaver*){};
 };
 
 // Test if current is NULL
